# origo-engine

./: .env.example  .gitignore  CLAUDE.md  README.md  USER_MANUAL.md  bash.exe.stackdump  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  prompt_for_doc.txt  seed_data.yaml  seed_employment_hero.yaml
api/: Dockerfile  Dockerfile.admin-api  Dockerfile.client-api  Dockerfile.worker  M2_DEPLOY.md  alembic.ini  bash.exe.stackdump  check_db.py  pyproject.toml  pytest_out.txt  seed_employment_hero.yaml
api/alembic/: env.py
api/alembic/versions/: 0001_initial_schema.py  0002_prompt_management.py  0003_add_gemini_platform.py  0004_admin_auth.py  0005_client_management.py  0006_client_users.py  0007_scheduler.py  0008_client_timezone.py  0009_recommendations.py  0010_display_id_and_model_config.py  0011_row_level_security.py  0012_platform_model_cache.py  0013_system_settings.py  0014_system_settings_config.py  0015_citation_type.py  0016_prompt_categories.py  0017_clear_prompt_categories.py  0018_response_sources.py  0019_v1_audit_fields.py  0020_m2_audit_hardening.py  0021_partial_run_status.py  0022_kill_switch_and_spend.py  0023_llm_pricing_overrides.py  0024_staged_runs.py  0025_phase_token_counts.py  0026_uncosted_call_tracking.py  0027_client_display_config.py
api/app/: admin_main.py  cli.py  client_main.py  config.py  db.py  main.py
api/app/analysis/: analyzer.py  prompt_template.py  schemas.py
api/app/api/: admin_auth.py  admin_client_users.py  admin_clients.py  admin_competitors.py  admin_dependencies.py  admin_knowledge_base.py  (+14 more)
(+205 files in other folders)
